--- a/API/ApolloGraphQL/package.json
+++ b/API/ApolloGraphQL/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.12.1",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "graphql-depth-limit": "^1.1.0",
     "mariadb": "^3.2.2"
   },
   "devDependencies": {
