--- a/API/GraphQL3/package.json
+++ b/API/GraphQL3/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "faker": "^6.6.6",
     "graphql": "^16.8.1",
     "nodemon": "^3.0.1"
   }
